--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -12,7 +12,8 @@ target_link_libraries(CORE_LIBS
       PRIVATE 
           tensorflow-lite
           UTIL_LIBS
-          OCL_LIBS)
+          OCL_LIBS
+          BackendFactory_LIBS)
 # message(STATUS "PROJECT_SOURCE_DIR: ${PROJECT_SOURCE_DIR}")
 # message(STATUS "CMAKE_BINARY_DIR: ${CMAKE_BINARY_DIR}")
 # message(STATUS "CMAKE_SOURCE_DIR: ${CMAKE_SOURCE_DIR}")
