--- a/backend/opencl/CMakeLists.txt
+++ b/backend/opencl/CMakeLists.txt
@@ -2,6 +2,7 @@
 file(GLOB_RECURSE OpenCL_SRC 
                 ${CMAKE_CURRENT_LIST_DIR}/execution/image/*.cpp                  
                 ${CMAKE_CURRENT_LIST_DIR}/core/OpenCL*.cpp
+                ${CMAKE_CURRENT_LIST_DIR}/core/ImageBufferConverter.cpp
                 ${CMAKE_CURRENT_LIST_DIR}/core/runtime/OpenCL*.cpp  
                 ${CMAKE_CURRENT_LIST_DIR}/utils/*.cpp)
 set(OPENCL_LIB_DIR "${CMAKE_SOURCE_DIR}/third_party/OpenCL")
