--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -11,13 +11,14 @@ add_library(CORE_LIBS SHARED
                 Tensor.cpp
                 Interpreter.cpp
                 Pipeline.cpp
-                ConvolutionCommon.cpp)
+                ConvolutionCommon.cpp
+                Model.cpp)
 target_link_libraries(CORE_LIBS
       PRIVATE 
           tensorflow-lite
           UTIL_LIBS
           OCL_LIBS
-          NodeFactory_LIBS)
+          Backend_LIBS)
 # message(STATUS "PROJECT_SOURCE_DIR: ${PROJECT_SOURCE_DIR}")
 # message(STATUS "CMAKE_BINARY_DIR: ${CMAKE_BINARY_DIR}")
 # message(STATUS "CMAKE_SOURCE_DIR: ${CMAKE_SOURCE_DIR}")
