add the executable cls and post process for the correct results

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ message(STATUS "SUNPLUS NEURAL NETWORK VERSION: " ${SNN_VERSION})
 
 project(SNN VERSION ${SNN_VERSION} LANGUAGES C CXX)
 
-
+set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 set (CMAKE_CXX_STANDARD 17)
 set(CMAKE_MODULE_PATH
   ${CMAKE_MODULE_PATH}
